scripts/nullaway/wpi/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8.txt
../wpi/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/DisassembledInstruction.java:49: error: [NullAway] assigning @Nullable expression to @NonNull field
        op1 = null;
            ^
    (see http://t.uber.com/nullaway )
../wpi/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/DisassembledInstruction.java:50: error: [NullAway] assigning @Nullable expression to @NonNull field
        op2 = null;
            ^
    (see http://t.uber.com/nullaway )
../wpi/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/DisassembledInstruction.java:61: error: [NullAway] assigning @Nullable expression to @NonNull field
        op2 = null;
            ^
    (see http://t.uber.com/nullaway )
../wpi/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:62: error: [NullAway] assigning @Nullable expression to @NonNull field
        srcEAHandler = null;
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:63: error: [NullAway] assigning @Nullable expression to @NonNull field
        dstEAHandler = null;
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:64: error: [NullAway] assigning @Nullable expression to @NonNull field
        memory = null;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1686: error: [NullAway] @NonNull field CpuCore$AddressRegisterWithIndexOperand.size not initialized
        protected @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull Size size;
                                                                                                                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1694: error: [NullAway] @NonNull field CpuCore$AddressRegisterWithIndexOperand.idxSize not initialized
        protected @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull Size idxSize;
                                                                                                                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1793: error: [NullAway] @NonNull field CpuCore$AbsoluteShortOperand.size not initialized
        protected @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull Size size;
                                                                                                                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1866: error: [NullAway] @NonNull field CpuCore$AbsoluteLongOperand.size not initialized
        protected @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull Size size;
                                                                                                                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1938: error: [NullAway] @NonNull field CpuCore$PCWithDisplacementOperand.size not initialized
        protected @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull Size size;
                                                                                                                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2015: error: [NullAway] @NonNull field CpuCore$PCWithIndexOperand.size not initialized
        protected @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull Size size;
                                                                                                                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2023: error: [NullAway] @NonNull field CpuCore$PCWithIndexOperand.idxSize not initialized
        protected @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull Size idxSize;
                                                                                                                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2124: error: [NullAway] @NonNull field CpuCore$ImmediateOperand.size not initialized
        protected @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull Size size;
                                                                                                                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2206: error: [NullAway] @NonNull field CpuCore$StatusRegisterOperand.size not initialized
        protected @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull Size size;
                                                                                                                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2210: error: [NullAway] @NonNull field CpuCore$StatusRegisterOperand.name not initialized
        protected @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull String name;
                                                                                                                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/Monitor.java:119: error: [NullAway] dereferenced expression line is @Nullable
        String[] tokens = line.split(" ");
                              ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/Monitor.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
17 errors
